feat: implement signup module logic
